// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Eslint with js config should save correct 1`] = `
"module.exports = {
    \\"env\\": {
        \\"es6\\": true,
        \\"node\\": true
    },
    \\"extends\\": \\"eslint:recommended\\",
    \\"globals\\": {
        \\"Atomics\\": \\"readonly\\",
        \\"SharedArrayBuffer\\": \\"readonly\\"
    },
    \\"parserOptions\\": {
        \\"ecmaVersion\\": 2018,
        \\"sourceType\\": \\"module\\"
    },
    \\"rules\\": {},
    \\"parser\\": \\"babel-eslint\\"
}
"
`;

exports[`Eslint with json config should save correct 1`] = `
"{
    \\"env\\": {
        \\"es6\\": true,
        \\"node\\": true
    },
    \\"extends\\": \\"eslint:recommended\\",
    \\"globals\\": {
        \\"Atomics\\": \\"readonly\\",
        \\"SharedArrayBuffer\\": \\"readonly\\"
    },
    \\"parserOptions\\": {
        \\"ecmaVersion\\": 2018,
        \\"sourceType\\": \\"module\\"
    },
    \\"rules\\": {},
    \\"parser\\": \\"babel-eslint\\"
}
"
`;

exports[`Eslint with yml config should save correct 1`] = `
"env:
  es6: true
  node: true
extends: eslint:recommended
globals:
  Atomics: readonly
  SharedArrayBuffer: readonly
parserOptions:
  ecmaVersion: 2018
  sourceType: module
rules: {}
parser: babel-eslint
"
`;
